<resources>
    <string name="app_version">1.9</string>
    <string name="app_version_name">V2.0</string>
    <string name="app_name">SeeWorld</string>
    <string name="second">Second</string>
    <string name="title_search_camera_title">Search</string>
    <string name="title_search_camera">Searching</string>
    <string name="title_camera_property">Camera Properties</string>
    <string name="title_camera_video">Camera Video</string>
    <string name="title_user_login">Login</string>
    <string name="title_user_register">Register</string>
    <string name="title_user_reset_password">Forgot Password?</string>
    <string name="main_tab_my_device">My Device</string>
    <string name="main_tab_world_view">SeeWorld</string>
    <string name="main_tab_recent">Message</string>
    <string name="main_tab_more">More</string>
    <string name="about_more_login_text">Login</string>
    <string name="about_more_about_us">About Us</string>
    <string name="about_more_rating">Rate Us</string>
    <string name="about_more_feedback">Feedback</string>
    <string name="about_more_login_out_text">Logout</string>
    <string name="about_more_change_pwd">Update Password</string>
    <string name="about_us_official">Kaicong Offcial Website</string>
    <string name="about_us_technology">Technical Forum</string>
    <string name="about_us_mall">Kaicong Mall</string>
    <string name="about_us_progress">Achievement</string>
    <string name="about_us_user_protocol">The EULA</string>
    <string name="login_user_account">Account:</string>
    <string name="login_user_register_email">Email</string>
    <string name="login_user_account_hint">Input your email.</string>
    <string name="login_user_password">Password:</string>
    <string name="login_user_password_twice">Confirm Password:</string>
    <string name="login_user_password_hint">Password</string>
    <string name="login_user_sms_code_hint">Input validate code.</string>
    <string name="login_user_phone_sms_code">Validate Code</string>
    <string name="login_user_password_twice_hint">Please re-enter your password</string>
    <string name="login_user_login_btn">Login</string>
    <string name="login_user_register">Register</string>
    <string name="login_user_login_cancel">Cancel</string>
    <string name="login_user_register_btn">Register</string>
    <string name="login_user_complete_register_btn">Regist successfully.</string>
    <string name="register_user_please_input_email">Input you Email</string>
    <string name="register_user_please_input_phone">Input your mobile</string>
    <string name="register_user_please_input_second_pass">Please re-enter your password</string>
    <string name="login_account_hint">Mail/PhoneNum</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_other_Login">Other Login</string>
    <string name="register_get_sms_code_btn">Click for</string>
    <string name="register_title_sms_code">Validate Code.</string>
    <string name="register_by_email">Mail</string>
    <string name="register_by_phone">Mobile</string>
    <string name="reset_by_email">Mail</string>
    <string name="reset_by_phone">Mobile</string>
    <string name="reset_pwd">Reset Your Password</string>
    <string name="register_take_sms_time">Sent</string>
    <string name="register_enable_account">Activate account</string>
    <string name="reset_by_email_success">The link to reset your password has been sent to your mailbox, please visit the mailbox to be modified</string>
    <string name="reset_by_phone_success">Change your password successfully by your phone number</string>
    <string name="upload_head_success">Upload Avatar successfully.</string>
    <string name="upload_head_failed">Upload Avatar failed.</string>
    <string name="edit_host">Host</string>
    <string name="edit_host_hint">0.0.0.0</string>
    <string name="edit_port">Port:</string>
    <string name="edit_port_hint">80</string>
    <string name="edit_user">Username</string>
    <string name="edit_user_hint">admin</string>
    <string name="edit_pass">Password:</string>
    <string name="btn_preview">Preview</string>
    <string name="btn_save">Save</string>
    <string name="text_camera_status">Camera Status:</string>
    <string name="text_video_status">Video Status:</string>
    <string name="text_video_preview">Preset</string>
    <string name="text_preview_title">Replace Preset?</string>
    <string name="btn_ok">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_video_hd">HD</string>
    <string name="btn_video_sd">BD</string>
    <string name="btn_video_speed">Fast</string>
    <string name="btn_video_type_normal">Normal</string>
    <string name="btn_video_type_night">Night</string>
    <string name="activity_main_manual">Manually</string>
    <string name="activity_search_camera_right_btn_text">Refresh</string>
    <string name="activity_main_right_btn_text">Add</string>
    <string name="activity_main_btn_collection">Favorite</string>
    <string name="title_get_sample">Home</string>
    <string name="activity_main_go_to">Go</string>
    <string name="activity_base_progress_dialog_content">Loading...</string>
    <string name="activity_add_zhiyun_device_title">Adding Devices.</string>
    <string name="activity_search_uid_wifi_title">Search</string>
    <string name="txtMute">Mute</string>
    <string name="txtListening">Listening</string>
    <string name="txtSpeaking">Speaking</string>
    <string name="txtListen">Listen</string>
    <string name="txtSpeak">Speak</string>
    <string name="tips_snapshot_ok">Save to album success.</string>
    <string name="connstus_connecting">Connecting...</string>
    <string name="connstus_connected">Online</string>
    <string name="connstus_disconnect">Offline</string>
    <string name="connstus_unknown_device">Unknown Device</string>
    <string name="connstus_connection_failed">Failed to connect.</string>
    <string name="connstus_connection_timeout">Timeout.</string>
    <string name="connstus_connect_connected">Connected</string>
    <string name="connstus_wrong_password">Wrong Password</string>
    <string name="tips_format_sdcard_success">Formatting Successfully.</string>
    <string name="tips_format_sdcard_failed">Formatting Failed.</string>
    <string name="setting_video_quality">Video Quality:</string>
    <string name="setting_video_channel">Video Channel:</string>
    <string name="setting_video_orientation">Video Flip:</string>
    <string name="setting_video_environment">Environment Mode:</string>
    <string name="tips_quitting">Exiting</string>
    <string name="tips_changing">Switching</string>
    <string name="add_device">Add Device</string>
    <string name="add_by_ip">IP Mode</string>
    <string name="add_by_ddns">Cloud ID/iSeeu ID:</string>
    <string name="add_by_ddns_menu">Cloud ID</string>
    <string name="add_by_ddns_hint">000000</string>
    <string name="add_by_zhiyun">iSeeu ID</string>
    <string name="add_by_search">Search LAN</string>
    <string name="add_by_scan">Scan QR Code</string>
    <string name="add_device_cemera_name">Name:</string>
    <string name="add_select_type">Select Model</string>
    <string name="add_my_camera">My Cameras</string>
    <string name="add_ip">IP:</string>
    <string name="add_longitude">Longitude</string>
    <string name="add_latitude">Latitude</string>
    <string name="add_input_zhiyun_num">Please input the iSeeu ID.</string>
    <string name="add_device_adapter_zhiyun">iSeeu ID:</string>
    <string name="add_device_adapter_ddns">Cloud ID:</string>
    <string name="add_device_adapter_ip">IP:</string>
    <string name="actionbar_menu_add_device">&lt;font color=\'white\'&gt;%1$s&lt;/font&gt;</string>
    <string name="add_device_by_ip_success">Add successfully.</string>
    <string name="add_device_by_zhiyun_success">Add iSeeu ID device success</string>
    <string name="add_device_by_ddns_success">Add successfully.</string>
    <string name="add_device_by_ip_failed">Add unsuccessfully.</string>
    <string name="add_device_by_zhiyun_failed">Add iSeeu ID device failure</string>
    <string name="add_device_by_ddns_failed">Add failed.</string>
    <string name="add_device_select_type">Please Select Device Model</string>
    <string name="add_device_edit_device_name">Please input the device name</string>
    <string name="add_device_edit_ip_address">Please input the IP address</string>
    <string name="add_device_edit_port">Please input the port</string>
    <string name="add_device_edit_account">Please input the device account.</string>
    <string name="add_device_edit_password">Please input the device password</string>
    <string name="add_device_edit_ddns_name">Please input the Cloud ID</string>
    <string name="add_device_edit_zhiyun_name">Please input the iSeeu ID</string>
    <string name="add_device_delete_device">Delete Device</string>
    <string name="sms_code_success">Validate code has been sent to your phone successfully, please enter the validate code as soon as possible</string>
    <string name="upload_photo_by_take_photo">Take A Pictute</string>
    <string name="upload_photo_by_select_photo">Choose From Photo</string>
    <string name="upload_photo_head">Avatar</string>
    <string name="change_pwd_old_hint">Please input old password</string>
    <string name="change_pwd_new_hint">Please input new password(6-20)</string>
    <string name="change_pwd_again_hint">Enter Again</string>
    <string name="change_pwd_success">Change password successfully</string>
    <string name="progress_text_check">Verifying Device</string>
    <string name="progress_text_check_ddns">Verifying Cloud ID</string>
    <string name="progress_text_check_device_success">Verifying device success</string>
    <string name="progress_text_check_device_failed">Verifying device failure:%1$s</string>
    <string name="common_operate_area">Control Panel</string>
    <string name="common_image_brightness">Brightness</string>
    <string name="common_image_saturation">Saturation</string>
    <string name="common_image_contrast">Contrast</string>
    <string name="common_image_flip">Flip</string>
    <string name="common_image_mirror">Mirror</string>
    <string name="common_image_night">Night</string>
    <string name="see_world_share_from">Share From SeeWorld</string>
    <string name="see_world_collect_success">Collected device success</string>
    <string name="see_world_collect_deleted">Collection canceled</string>
    <string name="see_world_comment">Comment</string>
    <string name="see_world_commit">Commit</string>
    <string name="see_world_delete">Delete</string>
    <string name="see_world_delete_comment">Delete this comment?</string>
    <string name="see_world_delete_success">Delete successfully.</string>
    <string name="see_world_has_collect">You don\'t have to collect it twice.</string>
    <string name="see_world_has_praise">You can like every 30 mins</string>
    <string name="see_world_reply">Reply</string>
    <string name="see_world_reply_notice">&lt;font color=\'#1366ab\'&gt;Reply@%1$s:&lt;/font&gt;</string>
    <string name="see_world_share_hot">Popularity:</string>
    <string name="see_world_share_model">Model:</string>
    <string name="see_world_location_find_fail">Sorry,no relation data!</string>
    <string name="device_property_share_notice">Set share title in brief</string>
    <string name="device_property_title_setting">Set Title</string>
    <string name="video_setting_brightness">Brightness</string>
    <string name="video_setting_contrast">Contrast</string>
    <string name="video_setting_mode">Mode</string>
    <string name="video_setting_saturation">Saturation</string>
    <string name="reward_record_to_me">Reward to me</string>
    <string name="reward_record_to_other">Reward to other</string>
    <string name="seeworld_agreement">SeeWorld Agreement</string>
    <string name="share_position_confirm">Apply for landmark</string>
</resources>