<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/segment_group_resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_btn2"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:text="@string/reward_record_to_me" />

        <RadioButton
            android:id="@+id/radio_btn1"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:text="@string/reward_record_to_other" />

    </info.hoang8f.android.segmented.SegmentedGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="5dp"
            android:divider="@color/comment_bg_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"></ListView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_world_location_find_fail" />

    </RelativeLayout>

</LinearLayout>
