<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/tab_view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/about_more_item_margin_top1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/change_pwd_old_hint"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent" />

        <View
            android:background="@color/list_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <EditText
            android:id="@+id/edit_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/change_pwd_new_hint"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent" />

        <View
            android:background="@color/list_line"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"></View>

        <EditText
            android:id="@+id/edit_again_pwd"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/change_pwd_again_hint"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>